--- a/Installed Packages/PyV8/win64-p3/config.json
+++ b/Installed Packages/PyV8/win64-p3/config.json
@@ -1,1 +1,1 @@
-{"skip_update": false, "last_id": "f10748a176d49fb4b464f256f48f1a3131112596", "last_update": 1475650627.643887}
+{"last_update": 1478833337.217537, "last_id": "f10748a176d49fb4b464f256f48f1a3131112596", "skip_update": false}
